--- a/shared/defaults.yml
+++ b/shared/defaults.yml
@@ -5,7 +5,7 @@ output_path: ./outputs/
 # ----------------
 data:
   files: # if one is not none it will override the dirs location
-    base: /home/phil/Desktop/VITON-Sonder/data #/Users/Sunsmeister/Desktop/VITON_data
+    base: D:\VirtualFitting\Virtual-Try-On #/Users/Sunsmeister/Desktop/VITON_data
     train: train_pairs.txt
     test: test_pairs.txt
 
